--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=JPkarts
 
 server.port = 8090
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kartsrm
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/rmkarts
 spring.datasource.username=root
 spring.datasource.password=Juanpablo616
 spring.jpa.hibernate.ddl-auto=update
