--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/rmkarts
 spring.datasource.username=root
 spring.datasource.password=Juanpablo616
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=test
