--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=JPkarts
 server.port = 8090
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/rmkarts
-spring.datasource.username=root
-spring.datasource.password=Juanpablo616
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=test
