--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=JPkarts
 
 server.port = 8090
+server.address=0.0.0.0
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/rmkarts
 spring.datasource.username=${DB_USERNAME}
